<resources>
    <string name="app_name">Library Management</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="hint_editor_activity_title">Add a new book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="category_overview">Overview</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="hint_book_name">Book Name</string>
    <string name="hint_book_id">Book ID</string>
    <string name="hint_book_publication">Publication</string>
    <string name="hint_book_author">Book Author</string>
    <string name="hint_book_quantity">Book Quantity</string>
    <string name="category_unknown">Unknown</string>
    <string name="category_engineering">Engineering</string>
    <string name="category_business">Business</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_issue_book">Issue a book</string>
    <string name="hint_user_issue_book">Issue a Book</string>
    <string name="hint_user_name">User Name</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_user_DOB">Date of Birth</string>
    <string name="hint_user_department">Department</string>
    <string name="hint_user_contact_number">Phone Number</string>
    <string name="book_category">Book</string>

</resources>
